--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Caesar Cipher</title>
     <link rel="stylesheet" href="style.css" />
+
   </head>
   <body>
     <div id="root"></div>
+    <h1>hello world</h1>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
