--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <h1>hello world</h1>
+    <h1>Code Caesar</h1>
+    <label>Ingrese el mensaje</label>
+    <input type="text" id="Message"/>
+    <button  id="button1" type="button">clicka</button>
+
+
+
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
