ya cifra una palabra

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,8 @@
     <div id="root"></div>
     <h1>Code Caesar</h1>
     <label>Ingrese el mensaje</label>
-    <input type="text" id="Message"/>
-    <button  id="button1" type="button">clicka</button>
-
-
+    <input type="text" id="first-message"/>
+    <button  id="btn-cipher" type="button">clicka</button>
 
     <script src="cipher.js"></script>
     <script src="index.js"></script>
