ya cifra palabra ingresando en caja de texto

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,17 @@
   <body>
     <div id="root"></div>
     <h1>Code Caesar</h1>
-    <label>Ingrese el mensaje</label>
-    <input type="text" id="first-message"/>
-    <button  id="btn-cipher" type="button">clicka</button>
+    <div class="">
+      <label id='text-mess'>Ingrese el mensaje</label>
+      <input type="text" id="message"/>
+    </div>
+    <div class="">
+      <label id='text-move'>Clave</label>
+      <input type="text" id="moveTo"/>
+    </div>
+    <div class="">
+      <button  id='btn-cipher' type="button">clicka</button>
+    </div>
 
     <script src="cipher.js"></script>
     <script src="index.js"></script>
