FUNCIONA EL HTML Y LOS EVENTOS

--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,31 @@
     <div id="root"></div>
     <h1>Code Caesar</h1>
     <div class="">
-      <label id='text-mess'>Ingrese el mensaje</label>
-      <input type="text" id="message"/>
-    </div>
-    <div class="">
       <label id='text-move'>Clave</label>
       <input type="text" id="moveTo"/>
     </div>
     <div class="">
-      <button  id='btn-cipher' type="button">clicka</button>
+      <label id='text-mess'>Ingrese el mensaje</label>
+      <input type="text" id="message"/>
+    </div>
+<div class="">
+
+</div>
+        <div class="">
+      <label id='text-move-back'>Clave</label>
+      <input type="text" id="moveTo-back"/>
+    </div>
+    <div class="">
+      <label id='text-mess-hide'>Mensaje Oculto</label>
+      <input type="text" id="message-hide"/>
+    </div>
+    <div class="">
+      <button  id='btn-cipher' type="button">cifrar</button>
+      <button  id='btn-decipher' type="button">decifrar</button>
+    </div>
+    <div class="">
+      <label for="">Resultado : </label>
+      <input id="text-result" type="text" style="display:none"/>
     </div>
 
     <script src="cipher.js"></script>
