mejorado de css

--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
-    <div class="titulo">
     <title>Caesar Cipher</title>
-    </div>
   </head>
   <body>
+  <div class="titulo">
+  <h1>Codigo César</h1>
+  </div>
     <div id="root"></div>
-    <h1>Code Caesar</h1>
     <div class="clave-content">
       <label id='text-move'>Clave</label>
       <input type="text" id="moveTo"/>
@@ -22,7 +22,7 @@
       <button  id='btn-cipher' type="button">cifrar</button>
       <button  id='btn-decipher' type="button">decifrar</button>
     </div>
-    <div class="">
+    <div class="message-content">
       <label for="">Resultado : </label>
       <p></p>
       <input id="text-result" type="text" />
