cambios en el read.me terminado

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         be smart and use it , read the instructions </p>
         <ol>
           <li>Enter your name</li>
-          <li>type you key ,the key must to be a number</li>
+          <li>type you key ,the key must be a number</li>
           <li>Choose code or decode the message</li>
         </ol>
           <button type="button" id="start">Start</button>
