--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <title>Caesar Cipher</title>
   </head>
   <body>
-    <div id="root"></div>
-    <div class="titulo" id="titulo-content">
-    <h1>Welcome to Bottle Up</h1>
-    </div>
-
+    <header class="encabezado">
+      <div id="root"></div>
+      <div class="titulo" id="titulo-content">
+      <h1>Welcome to Bottle Up</h1>
+      </div>
+    </header>
+    <section class="contenido">
       <div class="instruction-content" id ="instruction">
         <p>Hey,this page code and decode message's
         be smart and use it , read the instructions </p>
@@ -21,26 +24,29 @@
         </ol>
           <button type="button" id="start">Start</button>
       </div>
-
-<div id="form1"  >
-      <div id="clave" class="clave-content"   >
-        <label id="text-move">Clave</label>
-        <input type="text" id="moveTo"/>
+    </section>
+    <section class="contenido2">
+      <div id="form1"  >
+            <div id="clave" class="clave-content"   >
+              <label id="text-move">Clave</label>
+              <input type="text" id="moveTo"/>
+            </div>
+            <div class="message-content" >
+              <label id="text-mess">Ingrese el mensaje</label>
+              <input type="text" id="message"/>
+            </div>
+            <div class="buttons-content" >
+              <button  id="btn-cipher" type="button">cifrar</button>
+              <button  id="btn-decipher" type="button">decifrar</button>
+            </div>
+            <div class="message-content" >
+              <label for="">Resultado : </label>
+              <p></p>
+              <input id="text-result" type="text" />
+            </div>
       </div>
-      <div class="message-content" >
-        <label id="text-mess">Ingrese el mensaje</label>
-        <input type="text" id="message"/>
-      </div>
-      <div class="buttons-content" >
-        <button  id="btn-cipher" type="button">cifrar</button>
-        <button  id="btn-decipher" type="button">decifrar</button>
-      </div>
-      <div class="message-content" >
-        <label for="">Resultado : </label>
-        <p></p>
-        <input id="text-result" type="text" />
-      </div>
-</div>
+    </section>
+    <footer class="pie de pagina"></footer>
 
     <script src="cipher.js"></script>
     <script src="index.js"></script>
