--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,27 @@
     <title>Caesar Cipher</title>
   </head>
   <body>
-    <header class="encabezado">
-      <div id="root"></div>
-      <div class="titulo" id="titulo-content">
-      <h1>Welcome to Bottle Up</h1>
-      </div>
-    </header>
-    <section class="contenido">
-      <div class="instruction-content" id ="instruction">
-        <p>Hey,this page code and decode message's
-        be smart and use it , read the instructions </p>
-        <ol>
-          <li>Enter your name</li>
-          <li>type you key ,the key must be a number</li>
-          <li>Choose code or decode the message</li>
-        </ol>
-          <button type="button" id="start">Start</button>
-      </div>
-    </section>
+
+<div id="root">
+      <header class="encabezado">
+              <div class="titulo" id="titulo-content">
+              <h1>Welcome to Bottle Up</h1>
+              </div>
+      </header>
+      <section class="contenido">
+            <div class="instruction-content" id ="instruction">
+              <p>Hey,this page code and decode message's
+              be smart and use it , read the instructions </p>
+              <ol>
+                <li>Enter your name</li>
+                <li>type you key ,the key must be a number</li>
+                <li>Choose code or decode the message</li>
+              </ol>
+                <button type="button" id="start">Start</button>
+            </div>
+      </section>
     <section class="contenido2">
-      <div id="form1"  >
+            <div id="form1"  >
             <div id="clave" class="clave-content"   >
               <label id="text-move">Clave</label>
               <input type="text" id="moveTo"/>
@@ -47,7 +48,7 @@
       </div>
     </section>
     <footer class="pie de pagina"></footer>
-
+</div>
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
