corrigiendo las etiquetas

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,7 +7,6 @@
     <title>Caesar Cipher</title>
   </head>
   <body>
-
 <div id="root">
       <header class="encabezado">
               <div class="titulo" id="titulo-content">
@@ -25,27 +24,26 @@
               </ol>
                 <button type="button" id="start">Start</button>
             </div>
-      </section>
-    <section class="contenido2">
-            <div id="form1"  >
-            <div id="clave" class="clave-content"   >
-              <label id="text-move">Clave</label>
-              <input type="text" id="moveTo"/>
-            </div>
-            <div class="message-content" >
-              <label id="text-mess">Ingrese el mensaje</label>
-              <input type="text" id="message"/>
-            </div>
-            <div class="buttons-content" >
-              <button  id="btn-cipher" type="button">cifrar</button>
-              <button  id="btn-decipher" type="button">decifrar</button>
-            </div>
-            <div class="message-content" >
-              <label for="">Resultado : </label>
-              <p></p>
-              <input id="text-result" type="text" />
-            </div>
-      </div>
+            <div class="contenido2">
+                    <div id="form1"  >
+                    <div id="clave" class="clave-content"   >
+                      <label id="moveTo">Clave</label>
+                      <input type="text" id="moveTo"/>
+                    </div>
+                    <div class="message-content" >
+                      <label id="message">Ingrese el mensaje</label>
+                      <input type="text" id="message"/>
+                    </div>
+                    <div class="buttons-content" >
+                      <button  id="btn-cipher" type="button">cifrar</button>
+                      <button  id="btn-decipher" type="button">decifrar</button>
+                    </div>
+                    <div class="message-content" >
+                      <label for="text-result">Resultado : </label>
+                      <p></p>
+                      <input id="text-result" type="text" />
+                    </div>
+              </div>
     </section>
     <footer class="pie de pagina"></footer>
 </div>
