arreglo de etiquetas html

--- a/src/index.html
+++ b/src/index.html
@@ -27,11 +27,11 @@
             <div class="contenido2">
                     <div id="form1"  >
                     <div id="clave" class="clave-content"   >
-                      <label id="moveTo">Clave</label>
+                      <label for="moveTo">Clave</label>
                       <input type="text" id="moveTo"/>
                     </div>
                     <div class="message-content" >
-                      <label id="message">Ingrese el mensaje</label>
+                      <label for="message">Ingrese el mensaje</label>
                       <input type="text" id="message"/>
                     </div>
                     <div class="buttons-content" >
@@ -44,6 +44,7 @@
                       <input id="text-result" type="text" />
                     </div>
               </div>
+</div>
     </section>
     <footer class="pie de pagina"></footer>
 </div>
