cambios ultimos de html , y js

--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="style.css" />
     <title>Caesar Cipher</title>
   </head>
@@ -13,10 +13,17 @@
               <h1>Welcome to Bottle Up</h1>
               </div>
       </header>
-      <aside class="contenido-lateral"></aside>
-
+      <aside class="contenido-lateral">
+        <div class="image-message">
+          <p>All i can image , it´s all i Do</p>
+          <p>Remember dont lose your key</p>
+          <p>Copy the key somewhere</p>
+          <p>keep secrets</p>
+        </div>
+      </aside>
       <section class="contenido">
             <div class="instruction-content" id ="instruction">
+               <h1>Hi:</h1>
               <p>Hey,this page code and decode message's
               be smart and use it , read the instructions </p>
               <ol>
@@ -39,6 +46,8 @@
                     <div class="buttons-content" >
                       <button  id="btn-cipher" type="button">Code</button>
                       <button  id="btn-decipher" type="button">Decode</button>
+                      <button  id="btn-clean" type="button">clean</button>
+
                     </div>
                     <div class="message-content" >
                       <label for="text-result">Result:</label>
